--- a/internships/freudenberg.html
+++ b/internships/freudenberg.html
@@ -1,10 +1,177 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Generic - Editorial by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 </head>
-<body>
+<body class="is-preload">
+
+<!-- Wrapper -->
+<div id="wrapper">
+
+    <!-- Main -->
+    <div id="main">
+        <div class="inner">
+
+            <!-- Header -->
+            <header id="header">
+                <a href="../index.html" class="logo"><strong>Home</strong></a>
+                <ul class="icons">
+                    <li><a href="https://twitter.com/MWilkinsonsPhD" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/matthew-wilkinson16/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/MRW-Code" class="icon brands fa-github-square"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://researchportal.bath.ac.uk/en/persons/matthew-wilkinson" class="fas fa-user-graduate"><span class="label"></span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=3bm2wzEAAAAJ&hl=en" class="ai ai-google-scholar-square"><span class="label"></span></a></li>
+                    <li><a href="https://orcid.org/0000-0001-6635-1469" class="ai ai-orcid"><span class="label"></span></a></li>
+                </ul>
+            </header>
+
+            <!-- Content -->
+            <section>
+                <header class="main">
+
+                    <h1>Undergraduate Industrial Training Year: Freudenberg Performance Materials Ltd</h1>
+                    </p>August 2017 - August 2018, I undertook an 12 month industrial placement as part of my undergraduate degree. The blog post on this page
+                    was written to summarize my experience. My placement year was the beginning of my interest in AI, and without it my career goals would
+                    certainly not be aligned with where they are today. More on this later...</p>
+                    <hr class="major" />
+
+                    <h2>What is an industrial training year?</h2>
+
+                    </p>If you go to university at Bath, it is almost impossible to miss the offer of going on a placement year. For my
+                    course specifically, this year formed part of the integrated masters course. To put it simply, the placements
+                    must be lab based and involve an independent research project for it to count towards the graduating with
+                    the MChem degree. The placement takes place during the third year of study and after many applications,
+                    I secured and accepting an offer to work at Freudenberg based at their site in Swindon, UK. </p>
+
+                    <h3>What was my job?</h3>
+
+                    </p>Officially my title was "Development Technician". This put me in the Research and Development department
+                    where I was the third member of the team. My job responsibilities ranged from experimental design, product
+                    testing and collecting, interpreting and presenting data. To explain fully what I did, and so that the
+                    context for the research project is clear, let me first explain what the site in Swindon actually did.</p>
+
+                    </p>As the name suggests, performance materials was our focus. Specifically, the site ran a treatment
+                    process that was essential in making battery separators. Often, people have asked me what these separators
+                    are and to use the most simple explanation, they are the bit between the positive and negative electrodes.
+                    To say that we made the separator is not totally true either. We actually ran a treatment process on a
+                    base non-woven polymer material that turned it from hydrophobic to hydrophilic. Without giving any specifics away
+                    imaging passing big rolls of material through a large chemical treatment line so that the properties at the
+                    end were changed. </p>
+
+                    <h3>My Research Project</h3>
+
+                    </p>Now the purpose of the site is clear, my project is much easier to explain. The site has 3 different
+                    levels of production line. Main lines were the big, running all day ones that made products we shipped to
+                    customers. A smaller pilot line, called Exicon, was used for testing new parameters and ideas during
+                    product development. Finally, we had a bench scale set up, called "the blue box". My project was to designed
+                    to investigate a new processing idea on the blue box, and then we tried scale up to Exicon. I cant share
+                    further details as it would be too specific, but this leads nicely onto why I became interested in data
+                    science and AI.</p>
+
+                    <h3>The start of my AI curiosity...</h3>
+
+                    </p>Each and every day on placement was the same for me. We tried some new ideas and processing parameters
+                    on the pilot lines. We took samples of the material at the end, and I performed a variety of quality control
+                    tests on them to see how out changed had impacted the properties. At first, this was fairly interesting. New testing,
+                    different results and learning about the fundamental chemistry behind the process was all new and exciting. However,
+                    every time we did these big parameter sweeps of different processing conditions, it felt like more of the same. Only
+                    our best material was kept, and even the uninitiated individual would feel there wasn't too much to differentiate
+                    our testing efforts. Now this left me wondering about learning from experience and trying to minimise the testing.
+                    In fact, after doing this placement, I distinctly remember discussing this very concept with my interviewers when I
+                    applied for my PhD. Looking back, before I had any ideas machine learning even existed, my mind had begun to wander
+                    down the path, which I am still on to this very day!</p>
+
+                    <h3>Final thoughts…</h3>
+
+                    </p>Having completed the placement, it pointed me towards industry more than academia. Although testing
+                    was repetitive, seeing the work we did put into production was rewarding and really reinforced my interest
+                    in seeing tangible output from research efforts. I must confess, I am making this website a good number of years
+                    after I ended this placement, and so I can't even be sure the site in Swindon still exists. If by some
+                    strange coincidence the people who I spent the year with stumble across this blog post, then please accept
+                    my thanks for being such fantastic colleagues. In particular, Bill, I hope you are finding success. Iain, who I adamantly
+                    protested to that a PhD was not on my career path, you were right. But more importantly, thank you for
+                    entertaining and extending my early interest in programming. Little did I know those were the first steps
+                    towards where I have ended up today. </p>
+
+
+
+                </header>
+
+
+            </section>
+
+        </div>
+    </div>
+
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <div class="inner">
+            <!-- Menu -->
+            <nav id="menu">
+                <header class="major">
+                    <h2>Menu</h2>
+                </header>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../aboutme.html">About Me</a></li>
+                    <li>
+                        <span class="opener">Research Output</span>
+                        <ul>
+                            <li><a href="./journal_articles.html">Journal Articles</a></li>
+                            <li><a href="./conferences.html">Conference Contributions</a></li>
+                            <li><a href="./coming_soon.html">Coming Soon - In Review</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="opener">Internships and Placements</span>
+                        <ul>
+                            <li><a href="../internships/turing.html">Alan Turing Institute: TRL Software Ltd</a></li>
+                            <li><a href="../internships/freudenberg.html">Freudenberg Performance Materials Ltd</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- Section -->
+            <section>
+                <header class="major">
+                    <h2>Contact Details</h2>
+                </header>
+                <p>For any questions about me, my research, or collaboration opportunities please reach out!</p>
+                <ul class="contact">
+                    <li class="icon solid fa-envelope"><a href="mailto:mrw39@bath.ac.uk">mrw39@bath.ac.uk</a></li>
+                    <!--										<li class="icon solid fa-phone">(000) 000-0000</li>-->
+                    <li class="icon solid fa-home">University of Bath, <br />
+                        Bath, <br />
+                        UK</li>
+                </ul>
+            </section>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            </footer>
+
+        </div>
+    </div>
+
+</div>
+
+<!-- Scripts -->
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/browser.min.js"></script>
+<script src="../assets/js/breakpoints.min.js"></script>
+<script src="../assets/js/util.js"></script>
+<script src="../assets/js/main.js"></script>
 
 </body>
 </html>
