--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<article>
 										<a href="#" class="image"><img src="images/imgsasdesc.png" alt="" /></a>
 										<h3>Images of Chemical Structures as Molecular Representations for Deep Learning</h3>
-										<p>Wilkinson, M.R., Martinez-Hernandez, U., Wilson, C.C. et al. Images of chemical structures as molecular representations for deep learning. Journal of Materials Research (2022). https://doi.org/10.1557/s43578-022-00628-9</p>
+										<p>Wilkinson, M.R., Martinez-Hernandez, U., Wilson, C.C. et al. Images of chemical structures as molecular representations for deep learning. Journal of Materials Research 37, 2293–2303 (2022). https://doi.org/10.1557/s43578-022-00628-9</p>
 										<ul class="actions">
 											<li><a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button">More</a></li>
 										</ul>
@@ -93,11 +93,11 @@
 										</ul>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/example_of_classes.png" alt="" /></a>
-										<h3>Artificial Intelligence for Crystal Morphology</h3>
-										<p>Under Review - coming soon!</p>
+										<a href="#" class="image"><img src="images/AI_Morph_TOC.png" alt="" /></a>
+										<h3>Predicting Pharmaceutical Crystal Morphology Using Artificial Intelligence</h3>
+										<p>Accepted Manuscript CrystEngComm 2022</p>
 										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
+											<li><a href="https://mrw-code.github.io/research_output/journal_articles.html#morph_pred" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
