--- a/research_output/journal_articles.html
+++ b/research_output/journal_articles.html
@@ -45,7 +45,22 @@
 
                     <hr class="major" />
                     <h2>2022</h2>
-                    <h3><a id="imgs_vs_desc_journal_article">Images of Chemical Structures as Molecular Representations for Deep Learning</a></h3>
+
+                    <h3><a id="morph_pred">Predicting Pharmaceutical Crystal Morphology Using Artificial Intelligence</a></h3>
+                    </p><span class="image left"><img src="../images/AI_Morph_TOC.png" alt="" /></span>This work is the publication that directly
+                    reflects the initial aim of my PhD, which was morphology prediction using AI. It builds upon my "Images of Chemical Structures as
+                    Molecular Representations for Deep Learning" paper directly. The work assesses the state of morphology prediction
+                    using open source data. Following this we address limitations through in house experimental work using experimental screening
+                    and robotics. As a result of better molecular representations, transfer learning and more curated data, we improve upon
+                    the the prediction accuracy of models trained on publicly available data.</p>
+
+                    <h5>Reference:<h5>
+                        </p>Wilkinson, M.R., Martinez-Hernandez, U., L. K. Huggon et al. Predicting Pharmaceutical Crystal Morphology Using Artificial Intelligence,
+                        Accepted manuscript CrystEngComm 2022. https://doi.org/10.1039/D2CE00992G</p>
+
+                        <a href="https://doi.org/10.1039/D2CE00992G" class="button">Go to Paper</a>
+
+                        <h3><a id="imgs_vs_desc_journal_article">Images of Chemical Structures as Molecular Representations for Deep Learning</a></h3>
                     </p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first publications as the lead author!</p>
                     </p>In chemical applications of AI, it is important to get the information about molecules into a machine readable form. This is more trivial
                     across other areas where you can work with tables of numbers, images or even encoded categories. With molecules however, capturing important details
@@ -55,8 +70,7 @@
                     </p>This work was also presented at the MRS spring meet conference. You can watch the talk using the button below!</p>
 
                     <h5>Reference:<h5>
-                    </p>Wilkinson, M.R, Martinez-Hernandez, U, Wilson, C.C et al. Images of chemical structures as molecular
-                    representations for deep learning. Journal of Materials Research (2022), https://doi.org/10.1557/s43578-022-00628-9</p>
+                    </p>Wilkinson, M.R., Martinez-Hernandez, U., Wilson, C.C. et al. Images of chemical structures as molecular representations for deep learning. Journal of Materials Research 37, 2293–2303 (2022). https://doi.org/10.1557/s43578-022-00628-9</p>
 
                     <a href="https://link.springer.com/article/10.1557/s43578-022-00628-9" class="button">Go to Paper</a>
                     <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">See Conference Video</a>
